[gd_scene load_steps=37 format=3 uid="uid://cu062rpm4w0lk"]

[ext_resource type="Script" path="res://Scripts/HUD.gd" id="1_kayje"]
[ext_resource type="FontFile" uid="uid://dikb6kaq6rwap" path="res://Assets/Fonts/kenvector_future.ttf" id="1_l5apb"]
[ext_resource type="Texture2D" uid="uid://cbw7tb54otaw4" path="res://Assets/Icons/lightning.png" id="2_xyjx7"]
[ext_resource type="Texture2D" uid="uid://ciumuwkelucec" path="res://Assets/Icons/coin.png" id="3_xvr64"]
[ext_resource type="Texture2D" uid="uid://bdr34jn8cuqnb" path="res://Assets/Icons/Weather/sun-solid.svg" id="5_q6t7r"]
[ext_resource type="Texture2D" uid="uid://b1ifr31ios5dk" path="res://Assets/Icons/Weather/cloud-solid.svg" id="6_vu54g"]
[ext_resource type="Texture2D" uid="uid://dkhkg5omrplta" path="res://Assets/Icons/Weather/wind-solid.svg" id="7_4qqeo"]
[ext_resource type="Texture2D" uid="uid://b4asdicqpdgi7" path="res://Assets/Icons/Weather/cloud-sun-solid.svg" id="7_6cre7"]
[ext_resource type="Texture2D" uid="uid://digas8in53l7q" path="res://Assets/Icons/Weather/tornado-solid.svg" id="8_ifrgb"]
[ext_resource type="Texture2D" uid="uid://cxfv3sl4nrkj7" path="res://Assets/Icons/PNG/Black/1x/pause.png" id="10_5e062"]
[ext_resource type="Texture2D" uid="uid://dpvplykks48k4" path="res://Assets/Icons/Weather/no_sign.png" id="10_5vwny"]
[ext_resource type="Texture2D" uid="uid://bahdoct3hvjvb" path="res://Assets/Icons/PNG/Black/1x/cart.png" id="11_jyge7"]
[ext_resource type="Texture2D" uid="uid://bht74yjo1b707" path="res://Assets/UI/PNG/red_cross.png" id="12_4nm0u"]
[ext_resource type="Texture2D" uid="uid://b1fb10w8a1gql" path="res://Assets/buildings/coal powerplant/level1.png" id="12_oiw1a"]
[ext_resource type="Texture2D" uid="uid://cw3o377hfisdp" path="res://Assets/buildings/solarpanel/solceller1.png" id="13_l17fa"]
[ext_resource type="Texture2D" uid="uid://c546k643fulat" path="res://Assets/buildings/windturbine/rotationAnimation/LEVEL1/0001.png" id="14_mt4g3"]
[ext_resource type="Texture2D" uid="uid://3s7kyae117nn" path="res://Assets/buildings/biogas/biogas1.png" id="16_q104s"]
[ext_resource type="Texture2D" uid="uid://cmdf2pyax8q2t" path="res://Assets/Medals/PNG/flat_medal2.png" id="18_h416i"]
[ext_resource type="Texture2D" uid="uid://bfsc7nojxv6wy" path="res://Assets/buildings/nuclear powerplant/1.png" id="18_julbm"]
[ext_resource type="Theme" uid="uid://d0qntl6ilcfff" path="res://Assets/FlatUI/kenneyUI-yellow.tres" id="19_ah2il"]
[ext_resource type="Texture2D" uid="uid://bb6wgnnbbsmjb" path="res://Assets/Medals/PNG/flat_medal9.png" id="19_hxx15"]
[ext_resource type="Texture2D" uid="uid://cicdcyusmu8xf" path="res://Assets/Medals/PNG/shaded_medal1.png" id="20_clds8"]
[ext_resource type="Theme" uid="uid://10bfrd2i470b" path="res://Assets/FlatUI/kenneyUI-red.tres" id="22_tu7nr"]
[ext_resource type="Theme" uid="uid://d0juxhgobuuv2" path="res://Assets/FlatUI/kenneyUI-green.tres" id="23_tw14b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88tuy"]
bg_color = Color(0.545098, 0.556863, 0.0784314, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kfwie"]
bg_color = Color(0.890196, 0.941176, 0.027451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="LabelSettings" id="LabelSettings_u1cap"]
font_size = 27

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b7tap"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0e0n1"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1p434"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bckn3"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q3oo2"]
bg_color = Color(0, 0.717647, 0.388235, 1)

[sub_resource type="FontVariation" id="FontVariation_4228f"]

[sub_resource type="FontVariation" id="FontVariation_463io"]

[sub_resource type="FontFile" id="FontFile_4uk0j"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="FontFile_mti0s"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_kayje")

[node name="EnergyProgressBar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -121.0
offset_top = 36.0
offset_right = 122.0
offset_bottom = 63.0
grow_horizontal = 2
scale = Vector2(1.5, 1.5)
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_l5apb")
theme_override_styles/background = SubResource("StyleBoxFlat_88tuy")
theme_override_styles/fill = SubResource("StyleBoxFlat_kfwie")
value = 50.0

[node name="Lightning" type="TextureRect" parent="EnergyProgressBar"]
layout_mode = 0
offset_left = 201.0
offset_top = -24.0
offset_right = 713.0
offset_bottom = 488.0
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_xyjx7")

[node name="CoinLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -292.0
offset_top = 46.0
offset_right = -192.0
offset_bottom = 77.0
grow_horizontal = 0
scale = Vector2(1.5, 1.5)
theme_override_fonts/font = ExtResource("1_l5apb")
text = "10000"
label_settings = SubResource("LabelSettings_u1cap")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Coin" type="TextureRect" parent="CoinLabel"]
layout_mode = 0
offset_left = 120.667
offset_top = -9.33333
offset_right = 632.667
offset_bottom = 502.667
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_xvr64")

[node name="WeatherPanelContainer" type="PanelContainer" parent="."]
anchors_preset = -1
anchor_left = 0.899
anchor_top = 0.323
anchor_right = 1.0
anchor_bottom = 0.62
offset_left = 0.351944
offset_top = -0.304009
offset_bottom = 0.239997
grow_horizontal = 2
grow_vertical = 2

[node name="WeatherPanel" type="Panel" parent="WeatherPanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b7tap")

[node name="VBoxContainer" type="VBoxContainer" parent="WeatherPanelContainer/WeatherPanel"]
layout_mode = 0
offset_left = 22.0
offset_top = 33.0
offset_right = 782.0
offset_bottom = 1313.0
scale = Vector2(0.2, 0.2)

[node name="WeatherSymbol1" type="CenterContainer" parent="WeatherPanelContainer/WeatherPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 11.32

[node name="Sun" type="TextureRect" parent="WeatherPanelContainer/WeatherPanel/VBoxContainer/WeatherSymbol1"]
visible = false
layout_mode = 2
texture = ExtResource("5_q6t7r")
expand_mode = 2
stretch_mode = 3

[node name="Cloud" type="TextureRect" parent="WeatherPanelContainer/WeatherPanel/VBoxContainer/WeatherSymbol1"]
visible = false
layout_mode = 2
texture = ExtResource("6_vu54g")

[node name="CloudSun" type="TextureRect" parent="WeatherPanelContainer/WeatherPanel/VBoxContainer/WeatherSymbol1"]
visible = false
layout_mode = 2
texture = ExtResource("7_6cre7")

[node name="WeatherSymbol2" type="CenterContainer" parent="WeatherPanelContainer/WeatherPanel/VBoxContainer"]
layout_mode = 2

[node name="Wind" type="TextureRect" parent="WeatherPanelContainer/WeatherPanel/VBoxContainer/WeatherSymbol2"]
visible = false
layout_mode = 2
texture = ExtResource("7_4qqeo")

[node name="Tornado" type="TextureRect" parent="WeatherPanelContainer/WeatherPanel/VBoxContainer/WeatherSymbol2"]
visible = false
layout_mode = 2
texture = ExtResource("8_ifrgb")

[node name="NoWind" type="TextureRect" parent="WeatherPanelContainer/WeatherPanel/VBoxContainer/WeatherSymbol2"]
visible = false
layout_mode = 2
texture = ExtResource("7_4qqeo")

[node name="TextureRect" type="TextureRect" parent="WeatherPanelContainer/WeatherPanel/VBoxContainer/WeatherSymbol2/NoWind"]
layout_mode = 0
offset_left = -266.16
offset_top = -50.6801
offset_right = 1013.84
offset_bottom = 717.32
scale = Vector2(0.8, 0.8)
texture = ExtResource("10_5vwny")

[node name="PauseButton" type="Button" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 54.0
offset_bottom = 54.0
scale = Vector2(2, 2)
theme_override_styles/normal = SubResource("StyleBoxFlat_0e0n1")
theme_override_styles/hover = SubResource("StyleBoxFlat_1p434")
icon = ExtResource("10_5e062")

[node name="CartButton" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = -107.0
offset_right = 59.0
offset_bottom = -57.0
grow_vertical = 0
scale = Vector2(2, 2)
theme_override_styles/normal = SubResource("StyleBoxFlat_0e0n1")
icon = ExtResource("11_jyge7")

[node name="BuildingPanelContainer" type="PanelContainer" parent="."]
visible = false
anchors_preset = -1
anchor_top = 0.92
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -19.6
grow_horizontal = 2
grow_vertical = 2

[node name="BuildingPanel" type="Panel" parent="BuildingPanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bckn3")

[node name="HBoxContainer" type="HBoxContainer" parent="BuildingPanelContainer/BuildingPanel"]
texture_filter = 1
custom_minimum_size = Vector2(1000, 1000)
layout_direction = 1
layout_mode = 1
offset_left = 422.0
offset_top = -3.0
offset_right = 11262.0
offset_bottom = 997.0
scale = Vector2(0.1, 0.1)
theme_override_constants/separation = 100
alignment = 1

[node name="Coal" type="Button" parent="BuildingPanelContainer/BuildingPanel/HBoxContainer"]
custom_minimum_size = Vector2(1000, 1000)
layout_mode = 2
icon = ExtResource("12_oiw1a")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Solar" type="Button" parent="BuildingPanelContainer/BuildingPanel/HBoxContainer"]
custom_minimum_size = Vector2(1000, 1000)
layout_mode = 2
icon = ExtResource("13_l17fa")
flat = true
expand_icon = true

[node name="Wind" type="Button" parent="BuildingPanelContainer/BuildingPanel/HBoxContainer"]
custom_minimum_size = Vector2(1000, 1000)
layout_mode = 2
icon = ExtResource("14_mt4g3")
flat = true
expand_icon = true

[node name="Bio" type="Button" parent="BuildingPanelContainer/BuildingPanel/HBoxContainer"]
custom_minimum_size = Vector2(1000, 1000)
layout_mode = 2
icon = ExtResource("16_q104s")
flat = true
expand_icon = true

[node name="Nuclear" type="Button" parent="BuildingPanelContainer/BuildingPanel/HBoxContainer"]
custom_minimum_size = Vector2(1000, 1000)
layout_mode = 2
icon = ExtResource("18_julbm")
flat = true
expand_icon = true

[node name="CloseButton" type="Button" parent="BuildingPanelContainer/BuildingPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -71.0
offset_top = -19.0
offset_right = -23.0
offset_bottom = 12.0
grow_horizontal = 0
scale = Vector2(3, 3)
icon = ExtResource("12_4nm0u")
flat = true

[node name="PopupPanel" type="PopupPanel" parent="."]
initial_position = 1
size = Vector2i(152, 220)

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 148.0
offset_bottom = 216.0

[node name="NameLabel" type="Label" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
text = "Navn:"

[node name="Name" type="Label" parent="PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="PriceLabel" type="Label" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
text = "Pris:"

[node name="Price" type="Label" parent="PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="ProductionLabel" type="Label" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
text = "Energi produktion:"

[node name="Production" type="Label" parent="PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="EmissionLabel" type="Label" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
text = "CO2 udledning:"

[node name="Emission" type="Label" parent="PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="LevelCompletePopup" type="Panel" parent="."]
visible = false
layout_direction = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -548.0
offset_top = -360.0
offset_right = 568.0
offset_bottom = 430.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("19_ah2il")
theme_override_styles/panel = SubResource("StyleBoxFlat_q3oo2")

[node name="CenterContainer" type="CenterContainer" parent="LevelCompletePopup"]
layout_mode = 0
offset_left = 124.0
offset_top = 10.0
offset_right = 936.0
offset_bottom = 794.0

[node name="VBoxContainer" type="VBoxContainer" parent="LevelCompletePopup/CenterContainer"]
layout_mode = 2
size_flags_stretch_ratio = 1.53

[node name="TitleLabel" type="Label" parent="LevelCompletePopup/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 55
text = "Du har klaret dette level!"

[node name="HBoxContainer" type="HBoxContainer" parent="LevelCompletePopup/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Medal1" type="TextureRect" parent="LevelCompletePopup/CenterContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("18_h416i")

[node name="Medal2" type="TextureRect" parent="LevelCompletePopup/CenterContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("19_hxx15")

[node name="Medal3" type="TextureRect" parent="LevelCompletePopup/CenterContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("20_clds8")

[node name="ScoreLabel" type="Label" parent="LevelCompletePopup/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Points:"

[node name="Score" type="Label" parent="LevelCompletePopup/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="EnergyLabel" type="Label" parent="LevelCompletePopup/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Elektricitet produceret:"

[node name="Energy" type="Label" parent="LevelCompletePopup/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="CO2Label" type="Label" parent="LevelCompletePopup/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "CO2 udledning:"

[node name="CO2" type="Label" parent="LevelCompletePopup/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="LevelCompletePopup/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ExitButton" type="Button" parent="LevelCompletePopup/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("22_tu7nr")
theme_override_fonts/font = SubResource("FontVariation_4228f")
theme_override_font_sizes/font_size = 20
text = "Tilbage"

[node name="NextButton" type="Button" parent="LevelCompletePopup/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("23_tw14b")
theme_override_font_sizes/font_size = 20
text = "Videre til næste level"

[node name="PausePopup" type="Panel" parent="."]
visible = false
self_modulate = Color(0.454902, 0.6, 0.337255, 1)
layout_direction = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -406.5
offset_top = -379.5
offset_right = 406.5
offset_bottom = 379.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q3oo2")

[node name="TitleLabel" type="Label" parent="PausePopup"]
layout_mode = 2
offset_left = 33.0
offset_top = 44.0
offset_right = 1092.0
offset_bottom = 181.0
scale = Vector2(0.7, 0.7)
theme = ExtResource("22_tu7nr")
theme_override_fonts/font = SubResource("FontVariation_463io")
theme_override_font_sizes/font_size = 100
text = "Spillet er sat på pause"

[node name="CenterContainer_Pause" type="CenterContainer" parent="PausePopup"]
modulate = Color(0.760784, 0.929412, 0.933333, 1)
self_modulate = Color(0.223529, 1, 1, 1)
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 0
offset_right = 812.0
offset_bottom = 759.0

[node name="VBoxContainer_Pause" type="VBoxContainer" parent="PausePopup/CenterContainer_Pause"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_constants/separation = 21

[node name="Resume" type="Button" parent="PausePopup/CenterContainer_Pause/VBoxContainer_Pause"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
theme = ExtResource("23_tw14b")
theme_override_fonts/font = SubResource("FontFile_4uk0j")
theme_override_font_sizes/font_size = 30
text = " Fortsæt spillet "

[node name="Exit" type="Button" parent="PausePopup/CenterContainer_Pause/VBoxContainer_Pause"]
layout_mode = 2
theme = ExtResource("22_tu7nr")
theme_override_fonts/font = SubResource("FontFile_mti0s")
theme_override_font_sizes/font_size = 32
text = "Tilbage til menu"

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="CartButton" to="." method="_on_cart_button_pressed"]
[connection signal="mouse_entered" from="BuildingPanelContainer/BuildingPanel/HBoxContainer/Coal" to="." method="on_building_hover" binds= ["coal"]]
[connection signal="mouse_exited" from="BuildingPanelContainer/BuildingPanel/HBoxContainer/Coal" to="." method="on_building_hover_exit"]
[connection signal="pressed" from="BuildingPanelContainer/BuildingPanel/HBoxContainer/Coal" to="." method="select_building" binds= ["coal"]]
[connection signal="mouse_entered" from="BuildingPanelContainer/BuildingPanel/HBoxContainer/Solar" to="." method="on_building_hover" binds= ["solar"]]
[connection signal="mouse_exited" from="BuildingPanelContainer/BuildingPanel/HBoxContainer/Solar" to="." method="on_building_hover_exit"]
[connection signal="pressed" from="BuildingPanelContainer/BuildingPanel/HBoxContainer/Solar" to="." method="select_building" binds= ["solar"]]
[connection signal="mouse_entered" from="BuildingPanelContainer/BuildingPanel/HBoxContainer/Wind" to="." method="on_building_hover" binds= ["wind"]]
[connection signal="mouse_exited" from="BuildingPanelContainer/BuildingPanel/HBoxContainer/Wind" to="." method="on_building_hover_exit"]
[connection signal="pressed" from="BuildingPanelContainer/BuildingPanel/HBoxContainer/Wind" to="." method="select_building" binds= ["wind"]]
[connection signal="mouse_entered" from="BuildingPanelContainer/BuildingPanel/HBoxContainer/Bio" to="." method="on_building_hover" binds= ["bio"]]
[connection signal="mouse_exited" from="BuildingPanelContainer/BuildingPanel/HBoxContainer/Bio" to="." method="on_building_hover_exit"]
[connection signal="pressed" from="BuildingPanelContainer/BuildingPanel/HBoxContainer/Bio" to="." method="select_building" binds= ["bio"]]
[connection signal="mouse_entered" from="BuildingPanelContainer/BuildingPanel/HBoxContainer/Nuclear" to="." method="on_building_hover" binds= ["nuclear"]]
[connection signal="mouse_exited" from="BuildingPanelContainer/BuildingPanel/HBoxContainer/Nuclear" to="." method="on_building_hover_exit"]
[connection signal="pressed" from="BuildingPanelContainer/BuildingPanel/HBoxContainer/Nuclear" to="." method="select_building" binds= ["nuclear"]]
[connection signal="pressed" from="BuildingPanelContainer/BuildingPanel/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="LevelCompletePopup/CenterContainer/VBoxContainer/HBoxContainer2/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="LevelCompletePopup/CenterContainer/VBoxContainer/HBoxContainer2/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="PausePopup/CenterContainer_Pause/VBoxContainer_Pause/Resume" to="." method="_on_resume_button_pressed_paused"]
[connection signal="pressed" from="PausePopup/CenterContainer_Pause/VBoxContainer_Pause/Exit" to="." method="_on_exit_pressed_paused"]
